# aklab-howto

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: gh-pages.yml
analysis/notebooks/: index.html
analysis/pandas/: index.html
analysis/plotting/: index.html
analysis/stats/: index.html
cheatsheets/git/: index.html
cheatsheets/hardware/: index.html
cheatsheets/linux/: index.html
cheatsheets/python/: index.html
docs/: index.md  other-tools.md
docs/analysis/: notebooks.md  pandas.md  plotting.md  stats.md
docs/cheatsheets/: git.md  hardware.md  linux.md  python.md
docs/hardware/: KiCad.md  RasPi-pinout.md  circuits.md  instruments.md  safety.md  sensors.md
docs/javascripts/: molecules.js
docs/lab/: experiment-workflows.md  fdm_materials.md  file-naming.md  reproducibility.md  tmp-restoration.md
docs/seminar/: echelle-spectra.md
docs/software/: git.md  installation-guide.md  pihti-vacuum.md  poetry.md  pypackage.md  python.md  scaffold.md  venv-troubles.md  venv.md  workflows.md
docs/styles/: brand.css  extra.css
hardware/KiCad/: index.html
hardware/RasPi-pinout/: index.html
hardware/circuits/: index.html
hardware/instruments/: index.html
hardware/safety/: index.html
hardware/sensors/: index.html
lab/experiment-workflows/: index.html
lab/fdm_materials/: index.html
lab/file-naming/: index.html
lab/reproducibility/: index.html
lab/tmp-restoration/: index.html
other-tools/: index.html
search/: search_index.json
src/: scaffold.py
styles/: brand.css  extra.css
(+34 files in other folders)
