[project]
name = "explainers"
version = "0.1.0"
description = "Public explainers and cheatsheets (MkDocs site)"
requires-python = ">=3.9"
readme = "README.md"

[project.optional-dependencies]
docs = [
  "mkdocs>=1.6",
  "mkdocs-material>=9.6",
  "pymdown-extensions>=10.0",
  "mdx_truly_sane_lists>=1.3"
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
